--- a/css/main.scss
+++ b/css/main.scss
@@ -15,12 +15,12 @@
 
 body {
   background: #212121;
-  color: #48b3e1;
+  color: #913124;
   font-family: 'Kulim Park';
 
   margin: 0;
   a {
-    color: #48b3e1;
+    color: #913124;
     text-decoration: none;
   }
 }
@@ -69,12 +69,6 @@ body {
       padding: 0px;
       li {
         list-style-type: none;
-        .yt1 {
-          color: red;
-        }
-        .yt2 {
-          color: white;
-        }
       }
     }
   }
